--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  
+  a.kill Land Now! 
+  
+  script(src="/socket.io/socket.io.js")
+  script(src="/javascripts/gest.js")
+  script(src="/javascripts/copter-sockets.js")
