--- a/views/index.jade
+++ b/views/index.jade
@@ -8,4 +8,5 @@ block content
   
   script(src="/socket.io/socket.io.js")
   script(src="/javascripts/gest.js")
+  script(src="/javascripts/mumble.js")
   script(src="/javascripts/copter-sockets.js")
